# policy-pulse-mcp

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
demo-cluster/: gatekeeper-policies.yaml  kyverno-policies.yaml  non-compliant-workloads.yaml
scripts/: setup-demo-cluster.sh
src/policy_pulse_mcp/: cache.py  checks.py  cluster.py  credentials.py  demo.py  evaluator.py  frameworks.py  intelligence.py  models.py  server.py
src/policy_pulse_mcp/adapters/: __init__.py  azure_policy.py  base.py  gatekeeper.py  kyverno.py
tests/: conftest.py  test_core.py  test_integration.py
