[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policy-pulse-mcp"
version = "0.1.0"
description = "Unified OPA/Gatekeeper, Kyverno, and Azure Policy MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ravi Pegata", email = "rpegata@infiniteelectronics.com" },
]
keywords = ["mcp", "kubernetes", "policy", "gatekeeper", "kyverno", "azure-policy", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
kubernetes = ["kubernetes>=28.0.0"]
azure = [
    "azure-mgmt-policyinsights>=1.0.0",
    "azure-identity>=1.15.0",
]
all = [
    "kubernetes>=28.0.0",
    "azure-mgmt-policyinsights>=1.0.0",
    "azure-identity>=1.15.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
policy-pulse-mcp = "policy_pulse_mcp.server:main"

[project.urls]
Homepage = "https://github.com/raviteja-pegata/policy-pulse-mcp"
Repository = "https://github.com/raviteja-pegata/policy-pulse-mcp"
Issues = "https://github.com/raviteja-pegata/policy-pulse-mcp/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]
